syntax = "proto3";

package login;

message LoginPayload {
  string email = 1;
  string password = 2;
}

message Login {
  string id = 1;
  string userId = 2;
  string jwt = 3;
}

service LoginService {
  rpc  login(LoginPayload) returns (Login){}
}